# grafyaml

./: .coveragerc  .drone.yml  .gitignore  .gitreview  .releaserc.json  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HACKING.rst  INSTALL.rst  README.md  README.rst  openstack-common.conf  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/release/: .releaserc.json
.github/workflows/: .releaserc.json  pull_request_check.yaml  release.yaml  tox.yaml
doc/source/: api.rst  conf.py  grafana-dashboard.rst  index.rst  installation.rst  usage.rst
etc/: grafyaml.conf
examples/advanced/: README.md  apps.yaml  render.py
examples/advanced/templates/: base_dashboard.yaml  dynamodb.yaml  kube_deployment.yaml  kube_ingress.yaml  kube_pod.yaml  mysql.yaml  sqs.yaml
examples/basic/: README.md  dashboard.yaml  dashboard_with_permissions.yaml
grafana_dashboards/: __init__.py  builder.py  cache.py  cmd.py  config.py  grafana.py  parser.py  version.py
grafana_dashboards/grafana/: __init__.py  dashboard.py  datasource.py  permissions.py  utils.py
grafana_dashboards/schema/: __init__.py  annotations.py  dashboard.py  datasource.py  links.py  panel.py  permissions.py  row.py
grafana_dashboards/schema/panel/: __init__.py  bargauge.py  base.py  dashlist.py  gauge.py  graph.py  heatmap.py  logs.py  piechart.py  row.py  singlestat.py  stat.py  statetimeline.py  table.py  text.py  timeseries.py
grafana_dashboards/schema/template/: __init__.py  adhoc.py  base.py  constant.py  custom.py  datasource.py  interval.py  query.py  textbox.py
grafana_dashboards/tests/: test_grafana_dashboards.py
tests/: base.py  conf_fixture.py  test_builder.py  test_cache.py  test_cmd.py  test_config.py  test_grafana.py  test_parser.py
tests/cmd/: base.py  test_delete.py  test_override.py  test_update.py  test_validate.py  test_version.py
tests/fixtures/: grafyaml.conf
tests/fixtures/builder/: datasource-0001.yaml  datasource-0002.yaml
tests/fixtures/cmd/: grafyaml.conf
tests/fixtures/parser/: dashboard-0001.yaml  dashboard-0002.yaml  dashboard-0003.yaml  json-dashboard-0001.json
tests/grafana/: test_datasource.py  test_graphite_datasource.py  test_influxdb_datasource.py
tests/schema/: base.py  test_dashboard.py  test_panel.py  test_row.py  test_schema.py
tests/schema/fixtures/: dashboard-0001.json  dashboard-0001.yaml  dashboard-0002.json  dashboard-0003.json  dashboard-0003.yaml  dashboard-0004.json  dashboard-0004.yaml  dashboard-0005.json  dashboard-0005.yaml  dashboard-0006.json  dashboard-0006.yaml  dashboard-0007.json  dashboard-0007.yaml  dashboard-0008.json  dashboard-0008.yaml  dashboard-0009.json  dashboard-0009.yaml  dashboard-0010.json  dashboard-0010.yaml  dashboard-0011.json  dashboard-0011.yaml  dashboard-0012.json  dashboard-0012.yaml  dashboard-0013.json  dashboard-0013.yaml  dashboard-0014.json  dashboard-0014.yaml  dashboard-0015.json  dashboard-0015.yaml  dashboard-0016.json  dashboard-0016.yaml  dashboard-0017.json  dashboard-0017.yaml  dashboard-0018.json  dashboard-0018.yaml  dashboard-0019.json  dashboard-0019.yaml  dashboard-0020.json  dashboard-0020.yaml  dashboard-0021.json  (+48 more)
tests/schema/panels/: bargauge.py  gauge.py  test_bargauge.py  test_base.py  test_dashlist.py  (+11 more)
(+3 files in other folders)
