[metadata]
name = grafyaml
summary = Grafyaml takes simple descriptions of Grafana dashboards in YAML format, and uses them to configure grafana.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    grafana_dashboards

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    grafana-dashboard=grafana_dashboards.cmd:main
oslo.config.opts =
    grafyaml.builder = grafana_dashboards.builder:list_opts
    grafyaml.cache = grafana_dashboards.cache:list_opts

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
