[metadata]
name = grafyaml
summary = Grafyaml takes simple descriptions of Grafana dashboards in YAML format, and uses them to configure grafana.
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://docs.openstack.org/infra/system-config/grafyaml.html
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Utilities

[files]
packages =
    grafana_dashboards

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    grafana-dashboard=grafana_dashboards.cmd:main

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
