[metadata]
name = grafyaml
summary = A nice and easy way to template Grafana dashboards in YAML
description-file = README.md
home-page = https://github.com/deliveryhero/grafyaml
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[files]
packages = grafana_dashboards

[entry_points]
console_scripts = grafana-dashboard=grafana_dashboards.cmd:main

[pbr]
warnerrors = True

[wheel]
universal = 1
